<resources>
    <string name="app_name">Phonebook</string>
    <string name="welcome_title">Welcome Page</string>
    <string name="welcome_text">Swipe left to continue</string>
    <string name="dark_btn">Dark</string>
    <string name="light_btn">Light</string>
    <string name="edit_page_title">Edit Phonebook Entry</string>
    <string name="add_page_title">New Phonebook Entry</string>
    <string name="detail_page_title">Phonebook Entry Details</string>
    <string name="name_field">Name</string>
    <string name="email_field">Email</string>
    <string name="phone_field">Phone</string>
    <string name="dob_field">Date of birth</string>
    <string name="add_page_btn">Add</string>
    <string name="edit_page_btn">Update</string>
    <string name="detail_page_btn">Back</string>
    <string name="empty_field">&lt;empty&gt;</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search contacts</string>
    <string name="dark_mode">Dark mode</string>
    <string name="item_added">[%1$s] added</string>
    <string name="item_updated">[%1$s] updated</string>
    <string name="item_deleted">[%1$s] deleted</string>
    <string name="undo">Undo</string>
    <string name="name_cannot_be_empty_error">Name cannot be empty</string>
    <string name="empty_data">There\'s nothing here</string>
    <string name="empty_result">No matching results</string>
    <string name="menu_sync">Sync now</string>
</resources>
