<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.DetailActivity">

    <ImageView
        android:id="@+id/detail_name_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/name_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person" />

    <TextView
        android:id="@+id/detail_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintBottom_toBottomOf="@+id/detail_name_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_name_icon"
        app:layout_constraintTop_toTopOf="@+id/detail_name_icon" />

    <ImageView
        android:id="@+id/detail_email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/email_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_name_icon"
        app:srcCompat="@drawable/ic_email" />

    <TextView
        android:id="@+id/detail_email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintBottom_toBottomOf="@+id/detail_email_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_email_icon"
        app:layout_constraintTop_toTopOf="@+id/detail_email_icon" />

    <ImageView
        android:id="@+id/detail_phone_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/phone_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_email_icon"
        app:srcCompat="@drawable/ic_phone" />

    <Button
        android:id="@+id/detail_phone_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/detail_phone_icon"
        app:layout_constraintStart_toEndOf="@+id/detail_phone_icon"
        app:layout_constraintTop_toTopOf="@+id/detail_phone_icon" />

    <ImageView
        android:id="@+id/detail_dob_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/dob_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_phone_icon"
        app:srcCompat="@drawable/ic_cake" />

    <TextView
        android:id="@+id/detail_dob_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintBottom_toBottomOf="@+id/detail_dob_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_dob_icon"
        app:layout_constraintTop_toTopOf="@+id/detail_dob_icon" />

    <Button
        android:id="@+id/detail_layout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/detail_page_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_dob_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>
